# flask-production-blog-app

./: .gitignore  AGENTS.md  Dockerfile  Procfile  package-lock.json  package.json  pyproject.toml  railway.json  start.sh  tailwind.config.js  vite.config.js  wsgi.py
.github/workflows/: ci-cd.yml
agent_playbooks/: frontend.md  workflow_orchestration.md
bloggr/: __init__.py  blog.py  email_service.py  models.py  roles.py
bloggr/static/: editor.iife.js
bloggr/static/css/: input.css  output.css
bloggr/static/js/: editor.js
bloggr/templates/: base.html
bloggr/templates/auth/: register.html
bloggr/templates/blog/: articles.html  edit.html  edit_profile.html  index.html  new.html  post.html  profile.html  search.html
bloggr/templates/components/: post_card.html  user_card.html
bloggr/templates/security/: _macros.html  _messages.html  login_user.html  register_user.html
migrations/versions/: 0001_initial.py  0e94bb3e5e27_added_primary_key_to_roles_users_table.py  227cecd7d3f8_make_confirmed_at_non_nullable_with_.py  28c839b19223_test_migration.py  2b1cc76ac586_added_post_table.py  2b98834f514c_added_confirmed_at_column_to_user_model.py  2dee11f76643_added_ondelete_cascade_to_roles_users_.py  2fbf77a8648d_added_email_column_to_user_model.py  47240a3bdde3_added_roles.py  4e17b592e8f7_.py  6507c8f09d3b_test_migration_2.py  79bd0e1f622c_add_confirmed_at_to_user.py  7e67a48519b4_updated_to_sqlalchemy_2_0.py  9275167531e3_.py  abb95de76255_make_confirmed_at_nullable_for_flask_.py  add_confirmed_at.py  drop_confirmed_at.py  e45f9a4542d6_merge_migration_branches.py  f6c27f14017f_add_is_published_field_to_post_model.py  remove_confirmed_at.py
scripts/: backup.sh
tests/: conftest.py  test_blog.py  test_factory.py  test_models.py
