[project]
name = "bloggr"
version = "1.0.0"
description = "A production-level flask blog web application."
authors = [
    {name = "Hanny Abubakar", email = "abubakarhannyom@gmail.com"}
]
dependencies = [
    "alembic==1.18.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "bleach==6.3.0",
    "blinker==1.9.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "Flask==3.1.2",
    "Flask-Login==0.6.3",
    "resend>=0.5.0",
    "Flask-Migrate==4.1.0",
    "Flask-Principal==0.4.0",
    "Flask-Security==5.7.1",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.2",
    "greenlet==3.3.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "libpass==1.9.3",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "psycopg2-binary==2.9.11",
    "pycparser==2.23",
    "python-dotenv==1.2.1",
    "setuptools==80.9.0",
    "SQLAlchemy==2.0.45",
    "typing_extensions==4.15.0",
    "webencodings==0.5.1",
    "Werkzeug==3.1.5",
    "wheel==0.45.1",
    "WTForms==3.2.1",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "testcontainers>=4.14.0,<5.0.0",
]
test = [
    "pytest>=9.0.0",
    "testcontainers>=4.14.0,<5.0.0",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bloggr"]
package-data = {"bloggr" = ["templates/**/*.html"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*:"
]